--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   modal_bottom_sheet: ^0.2.0+1
+  provider: ^4.3.2+2
 
 
 dev_dependencies:
